# percival-agentmail-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  scratch_test.py
.github/workflows/: ci.yml
src/percival_agentmail_mcp/: __init__.py  client.py  config.py  constants.py  decorators.py  helpers.py  lifespan.py  prompts.py  server.py  tools.py
src/percival_agentmail_mcp/tools/: __init__.py  drafts.py  inbox.py  messages.py  status.py  threads.py  version.py
tests/: __init__.py  conftest.py  test_client_wrapper_shutdown.py  test_config.py  test_decorators.py  test_error_resilience.py  test_format_error_validation.py  test_inbox_metadata_sdk_support.py  test_lifespan.py  test_mcp_transport_contract.py  test_normalize_list.py  test_prompts.py  test_security_fencing.py  test_tools.py
tests/tools/: __init__.py  _fixtures.py  test_drafts.py  test_inbox.py  test_messages.py  test_status.py  test_threads.py  test_version.py
