[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "percival-agentmail-mcp"
version = "0.1.0"
description = "Percival AgentMail MCP server — the Nanobot agent's own email service"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "mcp[cli]>=1.12.0",
    "agentmail>=0.5.0",
    "python-dotenv>=0.19.0",
    "pydantic>=2.3.0",
    "pydantic-settings>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.25.3",
    "ruff>=0.11.2",
]

[project.scripts]
percival-agentmail-mcp = "percival_agentmail_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/percival_agentmail_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
